Update webpage FE/BE
· new api for get list of menu
· front-end call the api than rand elements into html
· remove unused file
